--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -574,7 +574,7 @@ may take some practice to use properly.
 The first step is to copy a sample input file to your
 private area,
 \begin{verbatim}
-   > cp $SNDATA_ROOT/sample_input_files/mlcs2k2/sim_[SURVEY].input. 
+   > cp $SNDATA_ROOT/sample_input_files/SALT2/sim_[SURVEY].input  . 
 \end{verbatim}
 %
 where {\tt [SURVEY]} is one of the surveys for which
@@ -591,7 +591,7 @@ Now you can run the simulation, for example, with
    > snlc_sim.exe  sim_SDSS.input
 \end{verbatim}
 %
-which should generated ten lightcurves using the MLCS2k2 model.
+which should generated 100 lightcurves using the SALT2 model.
 The next step is to modify the input file to suit your needs.
 The input parameters are internally commented within the
 source code; for example, to get more information about
@@ -607,42 +607,23 @@ All of the input options are defined in a structure
 called {\tt INPUTS} in {\tt snlc\_sim.h}.
 Please report variables that are not commented, or that
 have confusing comments.
-Don't hesitate contacting other people familiar with \simexe.  
-Some of the light curve parameters are obscure 
-(i.e, describing the distribution of extinction \& $\Delta$), 
-and our best estimates of these parameters can change.
-To reduce the burden of tracking all of these parameters,
-defaults for these obscure parameters are stored in the 
-file
-\begin{verbatim}
-   $SNDATA_ROOT/models/snlc_sim.defaults  .
-\end{verbatim}
-%
-If you simply ignore these obscure parameters in your input file, 
-the ``defaults'' defined above will be used in the simulation. 
-You can modify any parameter by defining the parameter 
-explicitly in your input file.
-
+Don't hesitate requesting help from other people familiar with \snana.
 
 The simulated lightcurves are located in
 \$\sndataroot/{\tt SIM}. Do NOT try `ls' !!!
-Instead, try `{\tt ls~-d */}' to see all versions.
+Instead, try `{\tt ls~-d *}' to see all versions.
 To avoid sifting through hundreds of versions from multiple
-users, I always use `{\tt RK}' as a prefix 
-for my versions, and therefore I can see my versions with
-`{\tt ls~-d~RK*/}.'
-Each simulated version is located in a sub-directory named
-by your version.
+users, use your initials (or project acronym) as a prefix 
+for your versions.
 %
-Recall that you have full write-privilege, so use caution.
-Each version has an auto-generated README file. If your version is
-called `MYFIRSTSIM', then do
+Each simulated version has an auto-generated README file. 
+If your version is called `MYFIRSTSIM', then do
 \begin{verbatim}
    > more $SNDATA_ROOT/SIM/MYFIRSTSIM/MYFIRSTSIM.README
 \end{verbatim}
 %
 which contains a list of all your simulation options.
-The default format is FITS: one FITS file for the
+The default sim-data format is FITS: one FITS file for the
 header info with one row per SN, and a second FITS
 file with all of the light curves. 
 Instead of FITS format, you can generate a text file per SN
