add SALT2mu warning for biasCor loss above 2 percent

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1029,6 +1029,7 @@ etc ...
 
 \begin{Verbatim}[frame=single]
   SIMLIB_MSKOPT:  nnn     # bit-mask of options (see below)
+  SIMLIB_MINOBS:  nnn     # require at least this many obs per LIBID
   SIMLIB_IDSTART: nnn     # start at LIBID nnn
   SIMLIB_IDLOCK:  nnn     # use only LIBID nnn ; skip all others
   SIMLIB_MAXRANSTART: nnn # start at random LIBID among first nnn entries
